exports[`operations/getColors.ts`] = `/*
 * Colors
 *
 * A sample API that demonstrates arrays as components
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, RequestOpts, ResponseArgs, throwIfNullOrUndefined, encodeURI, RequestConversion, StandardResponse, TransformRequest } from '@principlestudios/openapi-codegen-typescript';
import {
    Colors,
} from './../models/Colors';

export type RequestParams = {
};
export type RequestBodies = {
};

export type StructuredResponses = {
    /** The available colors */
    200: {
        'application/json': Colors;
    };
};
export type Responses = 
    | StandardResponse<200, 'application/json', Colors>;

export function getColors(params: RequestParams): RequestOpts;
export function getColors(params: RequestParams): RequestOpts {
    throwIfNullOrUndefined(params, 'params');

    const headers: HttpHeaders = {};

    return {
        path: '/colors',
        method: 'POST',
        headers,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            200,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as Responses;

export const conversion: RequestConversion<RequestParams, {}, Responses, 'no-body'> = {
    request: getColors,
    response: responseConversion,
};

`;

exports[`operations/getPalettes.ts`] = `/*
 * Colors
 *
 * A sample API that demonstrates arrays as components
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, RequestOpts, ResponseArgs, throwIfNullOrUndefined, encodeURI, RequestConversion, StandardResponse, TransformRequest } from '@principlestudios/openapi-codegen-typescript';
import {
    Palettes,
} from './../models/Palettes';

export type RequestParams = {
};
export type RequestBodies = {
};

export type StructuredResponses = {
    /** The available palettes */
    200: {
        'application/json': Palettes;
    };
};
export type Responses = 
    | StandardResponse<200, 'application/json', Palettes>;

export function getPalettes(params: RequestParams): RequestOpts;
export function getPalettes(params: RequestParams): RequestOpts {
    throwIfNullOrUndefined(params, 'params');

    const headers: HttpHeaders = {};

    return {
        path: '/palette',
        method: 'POST',
        headers,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            200,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as Responses;

export const conversion: RequestConversion<RequestParams, {}, Responses, 'no-body'> = {
    request: getPalettes,
    response: responseConversion,
};

`;

exports[`operations/index.ts`] = `/*
 * Colors
 *
 * A sample API that demonstrates arrays as components
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { conversion as getColors } from './getColors';
import { conversion as getPalettes } from './getPalettes';

export default {
    getColors,
    getPalettes,
} as const;
`;

exports[`models/Colors.ts`] = `/*
 * Colors
 *
 * A sample API that demonstrates arrays as components
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */

/**
 * @export
 */
export type Colors =
    Array<string>;
`;

exports[`models/Palettes.ts`] = `/*
 * Colors
 *
 * A sample API that demonstrates arrays as components
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import {
    Colors,
} from './Colors';

/**
 * @export
 */
export type Palettes =
    Array<Colors>;
`;

